fixed create function for users
