# week3-4Project/routes/users.js
@@ -4,15 +4,15 @@ const usersController = require("../controllers/users");
 const { isAuthenticated } = require("../middleware/authenticate");
 
 routes.get("/", cors(), usersController.getAllUsers);
-routes.get("/:review_id", cors(), usersController.getOneUser);
+routes.get("/:user_id", cors(), usersController.getOneUser);
 
-// create a review
+// create a user
 routes.post("/", cors(), isAuthenticated, usersController.create);
 
-// update a review
+// update a user
 routes.put("/:_id", cors(), isAuthenticated, usersController.update);
 
-// delete a review or all users
+// delete a user or all users
 routes.delete("/:_id", cors(), isAuthenticated, usersController.deleteOne);
 routes.delete("/", cors(), isAuthenticated, usersController.deleteAll);
 
